apps/radarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    network-ingress-homepage: "true"
