apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: "RuntimeDefault"
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media-cover
              mountPath: /config/MediaCover
            - name: radarr-media
              mountPath: /media
            - name: radarr-seedbox
              mountPath: /downloads
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: radarr-config
          emptyDir: {}
        - name: radarr-media-cover
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: radarr-media
          persistentVolumeClaim:
            claimName: radarr-media-pvc
        - name: radarr-seedbox
          persistentVolumeClaim:
            claimName: radarr-seedbox-pvc
        - name: tmp
          emptyDir: {}
