apps/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-lan
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.wevelsiep.com`)
      kind: Rule
      services:
        - name: radarr
          port: 80
