apps/radarr/cnp-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: radarr
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
        - matchLabels:
            io.kubernetes.pod.namespace: homepage
            app: homepage
        - matchLabels:
            io.kubernetes.pod.namespace: houndarr
            app: houndarr
        - matchLabels:
            io.kubernetes.pod.namespace: seerr
            app: seerr
        - matchLabels:
            io.kubernetes.pod.namespace: prowlarr
            app: prowlarr
        - matchLabels:
            io.kubernetes.pod.namespace: unpackerr
            app: unpackerr
        - matchLabels:
            io.kubernetes.pod.namespace: autobrr
            app: autobrr
        - matchLabels:
            io.kubernetes.pod.namespace: qui
            app: qui
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
